zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__no_frame_style_with_split_row_of_ui_panes_at_top.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 5145
expression: snapshot
---
00 (C): I am the left bar                                      I am the right bar                                                
01 (C): I am the main pane                                                                                                       
02 (C):                                                                                                                          
03 (C):                                                                                                                          
04 (C):                                                                                                                          
05 (C):                                                                                                                          
06 (C):                                                                                                                          
07 (C):                                                                                                                          
08 (C):                                                                                                                          
09 (C):                                                                                                                          
10 (C):                                                                                                                          
11 (C):                                                                                                                          
12 (C):                                                                                                                          
13 (C):                                                                                                                          
14 (C):                                                                                                                          
15 (C):                                                                                                                          
16 (C):                                                                                                                          
17 (C):                                                                                                                          
18 (C):                                                                                                                          
19 (C):
